--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,8 @@
-# TimeRunningUp
-Emulation of human life as services, purchases, loans, troubled, work, promotions. All stack Spring Cloud features. Prepared to move on cloud. 12 factors app. Fallacies of distributed computing.
+= TimeRunningUp
 
+----
+Emulation of human life as services, purchases, loans, troubled, work, promotions. All stack Spring Cloud features. Prepared to move on cloud. 12 factors app. Fallacies of distributed computing.
+----
 
 https://en.wikipedia.org/wiki/Fallacies_of_distributed_computing
 
